style: format code for consistency and readability